<resources>
    <string name="app_name" translatable="false">MyStoryApp</string>
    <string name="title_welcome_page">Welcome to Dicoding Stories!</string>
    <string name="desc_welcome_page">Explore a collection of learning stories from Dicoding students and graduates.</string>
    <string name="label_home">Home</string>
    <string name="label_detail">Detail Story</string>
    <string name="label_post">Post Story</string>

    <string name="tab_text_1" translatable="false">Feed</string>
    <string name="tab_text_2" translatable="false">Maps</string>

    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="language">Language</string>

    <string name="field_password">Password is too short (minimum is 8 characters)</string>
    <string name="field_email">Invalid email format</string>

    <string name="err_name_field">Name can\'t be blank</string>
    <string name="err_email_field">Email can\'t be blank</string>
    <string name="err_password_field">Password can\'t be blank</string>
    <string name="err_description_field">Description can\'t be blank</string>
    <string name="err_image_field">Picture can\'t be blank</string>
    <string name="err_permission">Permission not granted</string>
    <string name="err_take_picture">Something went wrong while capturing the picture</string>
    <string name="err_camera">Failed to display camera</string>
    <string name="err_maps">Failed to load map</string>
    <string name="err_location">Location is not found. Try Again</string>
    <string name="err_gps">You must enable GPS to use this app!</string>
    <string name="permission_required">Camera access is required to display the camera preview.</string>
    <string name="permission_granted">Permission is granted. You can use the camera now.</string>
    <string name="set_switch_location">Set location</string>
    <string name="ok" translatable="false">OK</string>

    <string name="signup_success_message">Registration successful!</string>
    <string name="post_story_success_message">Story posted successfully!</string>

    <string name="upload">Upload Story</string>
    <string name="camera">Take from Camera</string>
    <string name="gallery">Choose from Gallery</string>

    <string name="enter_desc">Enter a description</string>

    <string name="date">5/8/2021</string>
    <string name="date_format">Uploaded on %1$s</string>

    <string name="content_desc_image">Story picture</string>
    <string name="content_desc_fab">Post a story</string>
    <string name="content_desc_capture">Capture image</string>
    <string name="content_desc_switch_camera">Switch camera</string>

    <string name="name">Name</string>
    <string name="desc">Description</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="retry">Retry</string>

</resources>