<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.detail.DetailStoryActivity">

    <ImageView
        android:id="@+id/thumbnailIv"
        android:layout_width="@dimen/default_size"
        android:layout_height="@dimen/image_story_size"
        android:layout_marginStart="@dimen/margin_m"
        android:layout_marginTop="@dimen/margin_xl"
        android:layout_marginEnd="@dimen/margin_m"
        android:contentDescription="@string/content_desc_image"
        android:scaleType="centerCrop"
        android:transitionName="thumbnail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/nameTv"
        android:layout_width="@dimen/default_size"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_m"
        android:layout_marginTop="@dimen/margin_m"
        android:layout_marginEnd="@dimen/margin_m"
        android:text="@string/name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textStyle="bold"
        android:transitionName="name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thumbnailIv" />

    <TextView
        android:id="@+id/descTv"
        android:layout_width="@dimen/default_size"
        android:layout_height="@dimen/default_size"
        android:layout_marginStart="@dimen/margin_m"
        android:layout_marginTop="@dimen/margin_m"
        android:layout_marginEnd="@dimen/margin_m"
        android:layout_marginBottom="@dimen/margin_m"
        android:text="@string/desc"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:textColor="?android:attr/textColorSecondary"
        android:transitionName="desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTv" />

</androidx.constraintlayout.widget.ConstraintLayout>