<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/margin_m"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_s">

        <ImageView
            android:id="@+id/thumbnailIv"
            android:layout_width="@dimen/default_size"
            android:layout_height="@dimen/thumbnail_height_size"
            android:contentDescription="@string/content_desc_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/nameTv"
            android:layout_width="@dimen/default_size"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_s"
            android:layout_marginTop="@dimen/margin_m"
            android:layout_marginEnd="@dimen/margin_s"
            android:text="@string/name"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thumbnailIv" />

        <TextView
            android:id="@+id/descTv"
            android:layout_width="@dimen/default_size"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_s"
            android:layout_marginTop="@dimen/margin_s"
            android:layout_marginEnd="@dimen/margin_s"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/desc"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColor="?android:attr/textColorSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>